# EZModbus

./: .gitignore  .gitmodules  .readthedocs.yaml  CMakeCache.txt  CMakeLists.txt  FRAMEDATA_IMPL.md  README.md  idf_component.yml  library.json  patch.diff  platformio.ini
.github/workflows/: ci.yml
ci/: .gitignore  README.md  build_examples.sh
docs/: README.md  mkdocs.yml  requirements.txt
docs/10-getting-started/: 100-introduction.md  101-installation.md  102-quick-start-guide.md
docs/20-core-concepts/: 200-library-overview.md  201-modbus-protocol-features.md  202-frame-client.md  203-modbus-word.md  204-error-handling.md  205-hal-wrappers.md
docs/30-how-to-guides/: 300-modbus-client-master.md  301-modbus-server-slave.md  302-modbus-bridge.md  303-coupling-modbus-components.md  399-api-reference.md
docs/40-additional-resources/: 400-examples.md  401-settings-compile-flags.md  402-memory-and-system-resources.md  403-testing.md  404-logging-debugging.md
docs/99-stylesheets/: extra.css
examples/esp-idf/bridge/main/: CMakeLists.txt  main.cpp
examples/esp-idf/rtu-client-server-loopback/main/: CMakeLists.txt  main.cpp
examples/esp-idf/rtu-client/main/: CMakeLists.txt  idf_component.yml  main.cpp
examples/esp-idf/rtu-server/main/: CMakeLists.txt  main.cpp
examples/esp-idf/tcp-client/main/: CMakeLists.txt  main.cpp
examples/esp-idf/tcp-server/main/: main.cpp
examples/pico-sdk/: CMakeLists.txt  README.md  modbus_client_tester.py  modbus_echo_server.py  rtu_loopback_main.cpp  tcp_client_main.cpp  tcp_server_main.cpp
examples/platformio/bridge/: rtu-tcp_main.cpp
examples/platformio/client/: rtu_main.cpp  tcp_main.cpp
examples/platformio/dmx/: ModbusDMX.h
examples/platformio/json-http/: ModbusHTTP.h  ModbusJsonCodec.h  http-server_main.cpp
examples/platformio/server/: rtu_main.cpp  tcp_main.cpp
src/: EZModbus.h
src/apps/: ModbusBridge.hpp  ModbusClient.cpp  ModbusClient.h  ModbusServer.cpp  ModbusServer.h
src/core/: ModbusCodec.hpp  ModbusCore.h  ModbusFrame.hpp  ModbusResultHelpers.inl  ModbusTypes.hpp  ModbusWord.hpp
src/drivers/: ModbusHAL_TCP.cpp  ModbusHAL_TCP.h  ModbusHAL_TCP_ESP32.inl  ModbusHAL_TCP_Pico_CH9120.inl  ModbusHAL_UART.cpp  ModbusHAL_UART.h  ModbusHAL_UART_ESP32.inl  ModbusHAL_UART_Pico.inl  ModbusHAL_UART_STM32.inl
src/interfaces/: ModbusInterface.hpp  ModbusRTU.cpp  ModbusRTU.h  ModbusTCP.cpp  ModbusTCP.h
src/utils/: ModbusDebug.cpp  ModbusDebug.hpp  ModbusEventBus.cpp  ModbusEventBus.hpp  ModbusLogSink.cpp  ModbusLogSink.hpp  ModbusLogger.hpp
test/test_bridge_loopback/: test_main.cpp  test_params.h
test/test_codec/: test_main.cpp
test/test_codec/mock/: ModbusDebug.h
test/test_rtu_client_loopback/: test_helpers.hpp  test_main.cpp  test_params.h
test/test_rtu_server_loopback/: ModbusTestAgent.h  ModbusTestClient.h  test_helpers.h  test_main.cpp
test/test_tcp_client_loopback/: test_main.cpp  test_params.h
